--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="zh-CN">
   <head>
-    <title>Server Starter</title>
+    <title>leafage ui</title>
     <meta charset="UTF-8" />
     <meta name="description" content="A system based on RBAC." />
     <meta name="format-description" content="telephone=no" />
