--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html dir="ltr" lang="en">
   <head>
-    <title>Leafage MS</title>
+    <title>Leafage UI</title>
     <meta charset="UTF-8" />
     <meta name="description" content="A system based on RBAC." />
     <meta name="format-description" content="telephone=no" />
